# CaP

./: .gitignore  README.md  demo_real_robot.py  home.py  main.py  pyproject.toml  test.py
camera_calibration/: image_to_robot.py  merged_robot_frame_colored_camera_317422074281.ply  merged_robot_frame_colored_camera_317422075456.ply  multicam.py  pc.py  rs_streamer.py  test.py  test_calib.py  use_parsed_coordinates.py
camera_calibration/calib/: transforms.npy
cap/: interfaces.py  segment_pc.py  test.py  test_sam.py
cap/config/: real_config.yaml
cap/lmp/: LLM_cache.py  lmp.py  lmp_wrapper.py  utils.py
cap/lmp/prompts/real/: fgen_prompt.txt  parse_obj_name_prompt.txt  parse_position_prompt.txt  parse_question_prompt.txt  tabletop_ui_prompt.txt  transform_shape_pts_prompt.txt  writer_prompt.txt
cap/pc_utils/: merge_pc.py  test.py  visualize.py
cap/segment/: gen_masks.py  test.py  utils.py
ril_env/: real_env.py  timestamp_accumulator.py  video_recorder.py  xarm_controller.py
xarm/tools/: blockly_tool.py  modbus_tcp.py
xarm/tools/blockly/: _blockly_tool.py
xarm/wrapper/: xarm_api.py
xarm/x3/: base.py  gripper.py  xarm.py
