[project]
name = "uril-cap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astunparse>=1.6.3",
    "atomics>=1.0.3",
    "av>=15.0.0",
    "numpy>=2.2.6",
    "openai>=1.99.1",
    "opencv-python>=4.11.0.86",
    "plotly>=6.2.0",
    "pygments>=2.19.2",
    "pyrealsense2>=2.56.5.9235",
    "pyyaml>=6.0.2",
    "scipy>=1.15.3",
    "shapely>=2.1.1",
    "threadpoolctl>=3.6.0",
    "zarr>=2.18.3",
]
