[project]
name = "uril-cap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "astunparse>=1.6.3",
    "atomics>=1.0.3",
    "av>=15.0.0",
    "black>=25.1.0",
    "click>=8.2.1",
    "diffusers==0.11.1",
    "einops>=0.8.1",
    "huggingface-hub==0.25.2",
    "numpy>=2.2.6",
    "open3d>=0.19.0",
    "openai>=1.99.1",
    "opencv-python>=4.11.0.86",
    "plotly>=6.2.0",
    "protobuf>=6.32.0",
    "pygments>=2.19.2",
    "pyopengl==3.1.0",
    "pyrealsense2>=2.56.5.9235",
    "pyrender==0.1.45",
    "pyyaml>=6.0.2",
    "scene-synthesizer[recommend]>=1.15.0",
    "scipy>=1.15.3",
    "sentencepiece>=0.2.1",
    "shapely>=2.1.1",
    "spconv>=2.3.8",
    "threadpoolctl>=3.6.0",
    "timm>=1.0.19",
    "torch>=2.8.0",
    "torch-scatter>=2.1.2",
    "transformers>=4.48.3",
    "ultralytics>=8.3.179",
    "webdataset>=1.0.2",
    "zarr>=2.18.3",
]

[tool.uv.workspace]
members = [
    "segment-anything",
]
